# actix-server-01

./: Cargo.toml
migrations/: 20241221033653_create_task_manager_schema.sql  20241221034530_tasks.sql  20241221163315_rename_task_to_tasks.sql
src/: main.rs
src/handlers/: create_task.rs  get_all_tasks.rs  mod.rs
src/models/: task.rs
src/router/: main.rs
