[package]
name = "actix-2"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version = "0.3", features = ["serde"] }
actix-web = "4"
actix-rt = "2.10.0"
dotenv = "0.15"
sqlx = { version = "0.8",  features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

